--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,7 @@
 {
   "name": "leaflet-switch-scale-control",
+  "version": "0.1.0",
+  "homepage": "https://github.com/Flexberry/leaflet-switch-scale-control",
   "license": "MIT",
   "main": [
     "src/L.Control.SwitchScaleControl.js",
@@ -7,8 +9,7 @@
   ],
   "ignore": [
     "**/.*",
-    "bower_components",
-    "examples"
+    "bower_components"
   ],
   "dependencies": {
     "leaflet": "1.0.1",
