Increase plugin's version

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "leaflet-switch-scale-control",
-  "version": "0.1.1",
+  "version": "0.1.1-beta.2",
   "homepage": "https://github.com/Flexberry/leaflet-switch-scale-control",
   "license": "MIT",
   "main": [
